--- a/package.json
+++ b/package.json
@@ -24,13 +24,13 @@
     "styled-components": "^5.3.6",
     "swr": "^2.0.0",
     "typescript": "4.9.4",
-    "web3-utils": "^1.8.1",
-    "web3": "1.7.4"
+    "web3": "1.7.4",
+    "web3-utils": "^1.8.1"
   },
   "devDependencies": {
     "@typechain/ethers-v5": "^10.2.0",
     "@types/node": "^18.11.18",
-    "@types/react": "^18.0.26",
+    "@types/react": "^18.0.31",
     "@types/styled-components": "^5.1.26",
     "eslint": "^8.31.0",
     "ethers": "^5.7.2",
